results/print-ir/expected/failure/resolver/ret_type_mismatch_lambda.psy.out
Parsed OK
error: Return type does not match function signature.
  --> tests/failure/resolver/ret_type_mismatch_lambda.psy:2:5
   |
  2|     ret a * 2;
   |     ^--- Here


Semantic analysis failed. Compilation stopped.
